--- a/skbasics.ipynb
+++ b/skbasics.ipynb
@@ -203,7 +203,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    " # Now separate the dataset as response variable and feature variables\n",
+    " ## Now separate the dataset as response variable and feature variables\n",
     " X = wine.drop('quality', axis = 1) #drop the actual prediction value ie. quality\n",
     " y = wine['quality'] # quality is what we are predicting"
    ]
